{
  "version": 4,
  "terraform_version": "1.14.7",
  "serial": 21,
  "lineage": "baa7f19f-cb6b-d61a-0a5e-4b2f0b761613",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "app_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-02dfbd4ff395f2a1b",
            "arn": "arn:aws:ec2:us-east-1:438155853145:instance/i-02e08fc51fde21e32",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-02e08fc51fde21e32",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-09d1c1a814630a063"
              }
            ],
            "primary_network_interface_id": "eni-09d1c1a814630a063",
            "private_dns": "ip-10-0-1-158.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.158",
            "public_ip": "44.211.206.28",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0a0565ca8ea28a12a",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ac23991de1a59689",
            "tags": {
              "Name": "MyTestEC2"
            },
            "tags_all": {
              "Name": "MyTestEC2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-081678858e08d6cfa"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "438155853145",
            "id": "i-02e08fc51fde21e32",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.app_sg",
            "aws_subnet.my_test_subnet",
            "aws_vpc.my_test_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "my_ig",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:438155853145:internet-gateway/igw-0cb2fedafdcfe9961",
            "id": "igw-0cb2fedafdcfe9961",
            "owner_id": "438155853145",
            "region": "us-east-1",
            "tags": {
              "Name": "MyTestIGW"
            },
            "tags_all": {
              "Name": "MyTestIGW"
            },
            "vpc_id": "vpc-037fdada1c57517f9"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.my_test_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:438155853145:route-table/rtb-0ceddc60dd06e7db9",
            "id": "rtb-0ceddc60dd06e7db9",
            "owner_id": "438155853145",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0cb2fedafdcfe9961",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "MyTestIGW"
            },
            "tags_all": {
              "Name": "MyTestIGW"
            },
            "timeouts": null,
            "vpc_id": "vpc-037fdada1c57517f9"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "438155853145",
            "id": "rtb-0ceddc60dd06e7db9",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.my_ig",
            "aws_vpc.my_test_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_1_rt_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05da8b42aa94da572",
            "region": "us-east-1",
            "route_table_id": "rtb-0ceddc60dd06e7db9",
            "subnet_id": "subnet-0ac23991de1a59689"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.my_ig",
            "aws_route_table.public_rt",
            "aws_subnet.my_test_subnet",
            "aws_vpc.my_test_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "app_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:438155853145:security-group/sg-081678858e08d6cfa",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-081678858e08d6cfa",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "HTTP",
            "name_prefix": "",
            "owner_id": "438155853145",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-037fdada1c57517f9"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "438155853145",
            "id": "sg-081678858e08d6cfa",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.my_test_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "my_test_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:438155853145:subnet/subnet-0ac23991de1a59689",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ac23991de1a59689",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "438155853145",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "1MyTestSubnet"
            },
            "tags_all": {
              "Name": "1MyTestSubnet"
            },
            "vpc_id": "vpc-037fdada1c57517f9"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "438155853145",
            "id": "subnet-0ac23991de1a59689",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.my_test_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "my_test_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:438155853145:vpc/vpc-037fdada1c57517f9",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-002a27a76d9565000",
            "default_route_table_id": "rtb-095b3eb5ba962fa99",
            "default_security_group_id": "sg-03a8741d4faf7193b",
            "dhcp_options_id": "dopt-099333a099dddec87",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-037fdada1c57517f9",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-095b3eb5ba962fa99",
            "owner_id": "438155853145",
            "region": "us-east-1",
            "tags": {
              "Name": "MyTestVPC"
            },
            "tags_all": {
              "Name": "MyTestVPC"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "438155853145",
            "id": "vpc-037fdada1c57517f9",
            "region": "us-east-1"
          }
        }
      ]
    }
  ]
}